# python_prj

./: .env.template  .gitignore  README.md  alembic.ini  main.py  models.py  pyproject.toml  pytest.ini  task_views.py
alembic/: env.py
alembic/versions/: 2025_01_20_1031-04370d7a7e6e_create_table.py  2025_01_20_1112-4770e3ff331a_create_task_table.py  2025_01_20_1115-05b804e5bbbd_create_task_table.py  2025_02_03_1528-e131d8233c28_user_task_tablse.py  2025_02_05_1115-86a53fe7cfdb_new_user_tablgsrse.py  2025_02_05_1118-3a9a138979ed_user_name_name.py  2025_02_05_1646-02627b43bc5c_user_name_name.py  716d62f3a9c0_create_table.py
app/: __init__.py  config.py  create_superuser.py  main.py  routers.py
app/auth/: __init__.py  dependencies.py  fastapi_users_router.py  schemas.py  transport.py  user_manager.py  utils.py  views.py
app/dependencies/: __init__.py  acess_tokens.py  strategy.py  users.py
app/dependencies/authentication/: __init__.py  access_tokens.py  backend.py  strategy.py  transport.py  user_manager.py  users.py
app/models/: __init__.py  access_token.py  base.py  db_helper.py  task.py  user.py
app/schemas/: __init__.py  users.py
app/tasks/: __init__.py  crud.py  dependencies.py  schemas.py  views.py
app/users/: __init__.py  crud.py  dependencies.py  router.py  schemas.py  views.py
models/: base.py  user.py
tests/: conftest.py  test_auth.py  test_base.py  test_tasks_crud.py  test_users_crud_by_admin.py
users/: crud.py  schemas.py  views.py
