[tool.poetry]
name = "python-prj"
version = "0.1.0"
description = ""
authors = ["evany <isumilov04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = {extras = ["email"], version = "^2.10.4"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
pydantic-settings = "^2.7.1"
asyncpg = "^0.30.0"
annotated-types = "^0.7.0"
alembic = "^1.14.1"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
