[tool.poetry]
name = "python-prj"
version = "0.1.0"
description = ""
authors = ["evany <isumilov04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
annotated-types = "^0.7.0"
alembic = "^1.14.1"
black = "^24.10.0"
python-multipart = "^0.0.20"
authlib = "^1.4.0"
passlib = "^1.7.4"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
pytest = "^8.3.4"
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.7.1"
httpx = "^0.28.1"
pytest-asyncio = "^0.25.2"
async-asgi-testclient = "^1.4.11"
fastapi-users = {extras = ["jwt"], version = "^14.0.1"}
fastapi-users-db-sqlalchemy = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
